# hwvc

./: CMakeLists.txt
proj/FkAndroid/: build.gradle  gradle.properties  settings.gradle
proj/FkAndroid/fkandroid/: build.gradle
proj/FkAndroid/fkapp2/: build.gradle
proj/FkAndroid/fkpreauto/: build.gradle
proj/FkAndroid/hwcommon/: build.gradle
proj/FkAndroid/hwmvp/: build.gradle
proj/fk_flutter/: .gitignore  README.md  pubspec.yaml
proj/fk_flutter/android/: gradle.properties  settings.gradle
proj/fk_flutter/lib/: Properties.dart  main.dart
proj/fk_flutter/test/: widget_test.dart
src/FkBase/: CMakeLists.txt
src/FkBase/core/: FkClassType.cpp  FkObject.cpp  FkSource.cpp
src/FkBase/entity/: FkAny.cpp  FkBuffer.cpp  FkByteBuffer.cpp  FkColor.cpp  FkDoubleVec2.cpp  FkFloatVec2.cpp  FkFloatVec3.cpp  FkGravity.cpp  FkIntVec2.cpp  FkMatrix.cpp  FkMemory.cpp  FkRational.cpp  FkRect.cpp  FkShape.cpp  FkSize.cpp  FkString.cpp  FkValue.cpp  FkVec2.cpp  FkVec3.cpp
src/FkBase/include/: FkAny.h  FkBuffer.h  FkByteBuffer.h  FkClassType.h  FkColor.h  FkDefinition.h  FkDoubleVec2.h  FkFileUtils.h  FkFloatVec2.h  FkFloatVec3.h  FkGravity.h  FkHandler.h  FkHandlerThread.h  FkIntVec2.h  FkLogcat.h  FkLooper.h  FkMath.h  FkMatrix.h  FkMemUtils.h  FkMemory.h  FkMessage.h  FkMessageQueue.h  FkNumber.h  FkObject.h  FkRational.h  FkRect.h  FkShape.h  FkSize.h  FkSource.h  FkString.h  FkThread.h  FkTimeUtils.h  FkValue.h  FkVec2.h  FkVec3.h
src/FkBase/thread/: FkHandler.cpp  FkHandlerThread.cpp  FkLooper.cpp  FkMessage.cpp  FkThread.cpp  (+1 more)
src/FkBitmap/: CMakeLists.txt
src/FkCodec/: CMakeLists.txt  LICENSE
src/FkFramework/: CMakeLists.txt
src/FkGraphic/: CMakeLists.txt
src/FkImage/: CMakeLists.txt
src/FkMain/: CMakeLists.txt
src/skia/: go.mod
tools/: gen_cpp.py  gen_pb.py
(+583 files in other folders)
